# md-wgpu

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs  render.rs  shape.rs  stretch.rs  widget.rs
src/render/: color.rs  dual_buffer.rs  point.rs  renderer.rs
src/render/shaders/: shader.frag  shader.vert
src/shape/: lines.rs  polygon.rs  rectangle.rs
