[package]
name = "md-wgpu"
version = "0.1.0"
authors = ["dr0pb3ar <''>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.6.2"
wgpu_glyph = "0.10"
log = "0.4"
winit = "0.24.0"
async-executor = "1.0"
pollster = "0.2"
image = "0.23"
shaderc = "0.6"
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.7"
wgpu-subscriber = "0.1"
futures = "0.3"
stretch = "0.3"


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"
